tests/snapshots/examples_fixtures/generics__working__accepts__constraint_inline_single.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/constraint_inline_single.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
