tests/snapshots/examples_fixtures/generics__working__accepts__data_contextual_instance_recursive_head.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/data_contextual_instance_recursive_head.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
