tests/snapshots/examples_fixtures/generics__working__accepts__data_named_fields_deriving_eq.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/data_named_fields_deriving_eq.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
