tests/snapshots/examples_fixtures/generics__working__accepts__data_result_err_rewrap.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/data_result_err_rewrap.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
