tests/snapshots/examples_fixtures/generics__working__accepts__data_tree_recursive.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/data_tree_recursive.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
