tests/snapshots/examples_fixtures/generics__working__accepts__data_two_type_params.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/data_two_type_params.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
