tests/snapshots/examples_fixtures/generics__working__accepts__effect_row_polymorphic_callback.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/effect_row_polymorphic_callback.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
