tests/snapshots/examples_fixtures/generics__working__accepts__fn_nested_shadowing.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/fn_nested_shadowing.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
