tests/snapshots/examples_fixtures/generics__working__accepts__infer_arity2_take_first.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/infer_arity2_take_first.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
