tests/snapshots/examples_fixtures/generics__working__accepts__infer_binding_group_order.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/infer_binding_group_order.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
